--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,18 +4,16 @@ services:
     build: .
     container_name: cotador_app
     restart: always
-    shm_size: '4gb' # Prevent Chrome crashes
+    shm_size: '4gb'
     ports:
-      - "127.0.0.1:3002:3000" # Localhost exposure for safety/proxy
+      - "127.0.0.1:3002:3000"
     environment:
       - REDIS_URL=redis://redis:6379
-      - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
+      - GEMINI_API_KEY=${GEMINI_API_KEY} 
       - PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
       - NODE_OPTIONS=--max-old-space-size=8192
       - UV_THREADPOOL_SIZE=128
       - PORT=3000
-      # PROXY_URL is now optional/fallback if proxies.txt is missing
-      # - PROXY_URL=
     volumes:
       - ./logs:/app/logs
       - ./outputs:/app/outputs
