--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,6 @@ jobs:
           host: ${{ secrets.HOST }}     # Deve ser o IP 45.172.145.202
           username: ${{ secrets.USERNAME }} # Agora é 'steffan'
           password: ${{ secrets.PASSWORD }} # Usando a senha 'a2312steff' do cofre
-          # key: ${{ secrets.SSH_KEY }}   <-- REMOVA ESTA LINHA
           port: 2222                    # Mantém a porta correta
           script: |
             # Garante que a pasta existe (usa -S para aceitar senha no sudo se precisar)
@@ -33,7 +32,8 @@ jobs:
             
             # Gera o .env
             echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" > .env
-            
+            # Decodifica a secret e cria o arquivo físico no servidor
+            echo "${{ secrets.COOKIES_B64 }}" | base64 -d > cookies.json            
             # Reconstrói
             # Adicionei 'sudo -S' pois seu usuário provavelmente precisa de senha para rodar docker
             echo "${{ secrets.PASSWORD }}" | sudo -S docker compose down
