--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.8'
 services:
   app:
     build: .
-    container_name: cotador_app
+    container_name: agente_app  # <--- MUDAMOS DE 'cotador_app' PARA 'agente_app'
     restart: always
     shm_size: '4gb'
     ports:
       - "127.0.0.1:3002:3000"
     environment:
       - REDIS_URL=redis://redis:6379
-      - GEMINI_API_KEY=${GEMINI_API_KEY} 
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
       - PUPPETEER_EXECUTABLE_PATH=/usr/bin/google-chrome-stable
       - NODE_OPTIONS=--max-old-space-size=8192
       - UV_THREADPOOL_SIZE=128
@@ -30,11 +30,11 @@ services:
 
   redis:
     image: redis:alpine
-    container_name: cotador_redis
+    container_name: agente_redis  # <--- MUDAMOS DE 'cotador_redis' PARA 'agente_redis'
     command: redis-server --save 60 1 --loglevel warning
     restart: always
     volumes:
-      - redis_data:/data
+      - agente_redis_data:/data # <--- MUDAMOS O NOME DO VOLUME TAMBÉM
 
 volumes:
-  redis_data:
+  agente_redis_data: # <--- VOLUME RENOMEADO PARA NÃO MISTURAR DADOS COM O ANTIGO
