--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           username: ${{ secrets.USERNAME }} # User: steffan
           password: ${{ secrets.PASSWORD }} # Pass: a2312steff
           port: 2222                    # Porta SSH customizada
-          script: |
+script: |
             # 1. Prepara diretório e permissões
             echo "${{ secrets.PASSWORD }}" | sudo -S mkdir -p /opt/agente-mabus
             echo "${{ secrets.PASSWORD }}" | sudo -S chown -R $USER:$USER /opt/agente-mabus
@@ -23,7 +23,7 @@ jobs:
             # 2. Navega para a pasta
             cd /opt/agente-mabus
             
-            # 3. Atualiza o código (Reset hard garante que a versão do servidor seja idêntica ao git)
+            # 3. Atualiza o código
             if [ ! -d ".git" ]; then
               git clone https://github.com/steffandsv/agentemabus.git .
             else
@@ -31,19 +31,19 @@ jobs:
               git reset --hard origin/main
             fi
             
-            # 4. Gera o arquivo .env
+            # 4. Gera o arquivo .env (Adicionado COOKIES_B64 aqui também para silenciar o aviso do Docker)
             echo "GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }}" > .env
             echo "GOOGLE_SEARCH_API_KEY=${{ secrets.GOOGLE_SEARCH_API_KEY }}" >> .env
             echo "GOOGLE_SEARCH_CX=${{ secrets.GOOGLE_SEARCH_CX }}" >> .env
             echo "DEEPSEEK_API_KEY=${{ secrets.DEEPSEEK_API_KEY }}" >> .env
+            echo "COOKIES_B64=${{ secrets.COOKIES_B64 }}" >> .env
             
-            # 5. Gera o arquivo de cookies (Decodifica Base64)
+            # 5. Gera o arquivo físico de cookies (Decodifica Base64) - Mantido conforme requisito
             echo "${{ secrets.COOKIES_B64 }}" | base64 -d > cookies.json            
             
-            # 6. Reinicia os containers com a nova build
-            # Usa sudo -S para passar a senha via pipe
+            # 6. Reinicia os containers
             echo "${{ secrets.PASSWORD }}" | sudo -S docker compose down
             echo "${{ secrets.PASSWORD }}" | sudo -S docker compose up -d --build --remove-orphans
             
-            # 7. Limpeza de imagens antigas para economizar espaço no VPS
+            # 7. Limpeza
             echo "${{ secrets.PASSWORD }}" | sudo -S docker image prune -f
