--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fast-csv": "^5.0.5",
     "googleapis": "^167.0.0",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.15.3",
     "p-limit": "^2.3.0",
     "playwright": "^1.57.0",
     "puppeteer": "^24.0.0",
